2007-04-30  Marc Singer  <elf@zealous.synapsedev.com>

	* src/mach-mx3/initialize.c: Extra check in the initialization
	routine so that we don't alter the timing registers if the CPU is
	already in the target mode.  It looks like the CPU doesn't like
	the PLLs being changed once it has booted.  It may be the SDRAM
	that doesn't like the timing change.
	
	* src/arch-arm/entry/reset.c: Restored setting of the CPSR mode in
	the loader.  The CPU boots in the undefined mode.  We move to
	supervisor mode, though this doesn't appear to be necessary for
	the kernel to boot.

	* src/mach-mx3/ipu.c (ipu_report): Improved clarity of IPU report
	to break out fields and to describe the formats in English.
	
2007-04-27  Marc Singer  <elf@buici.com>

	* include/asm/cp15-armv6.h: Fixed the cache control macros for the
	ARMV6.

2007-04-27  Marc Singer  <elf@zealous.synapsedev.com>

	* src/mach-mx3/ipu.c: More IPU debug code.  The report function
	has a clean rendering of the registers. 

	* src/mach-mx3/mx31.h (CCM_PDR0_533_V): Switched to 533MHz CPU
	clock.

	* src/mach-mx3/uart.h (INITIALIZE_CONSOLE_UART): extended the
	FIFOS to 16 bytes.

	* src/mach-mx3/initialize.c: Added initialization of COSR even
	though we don't use it.

	* src/mach-mx3/Kconfig: New architecture number for Rosencrantz.

2007-04-24  Marc Singer  <elf@zealous.synapsedev.com>

	* src/apex/services.c: Created this file to hold service
	init/release code.

	* src/apex/env.c: Added a "" to the startup command so that we can
	have an empty startup command.

2007-04-09  Marc Singer  <elf@zealous.synapsedev.com>

	* 1.4.18 for mx31 changes.

2007-04-06  Marc Singer  <elf@zealous.synapsedev.com>

	* src/drivers/drv-mem.c (memory_read): Fixed the memory read
	function so that it properly reads from word width regions.

	* src/mach-mx3/initialize.c: Fixed the usleep timer programming.
	There were two problems.  First, the base frequency is not as
	advertized.  The CPU can only use the IPG clock as the basis.