@@ -40,8 +40,11 @@ int cmd_version (int argc, const char** argv)
 {
   printf (
 "\n\nAPEX Boot Loader " APEXRELEASE
-" -- Copyright (c) 2004,2005,2006,2007 Marc Singer\n\n"
-"APEX comes with ABSOLUTELY NO WARRANTY."
+" -- Copyright (c) 2004,2005,2006,2007 Marc Singer\n"
+#if defined (CONFIG_TARGET_DESCRIPTION) && !defined (CONFIG_SMALL)
+" compiled for " CONFIG_TARGET_DESCRIPTION "\n"
+#endif
+"\nAPEX comes with ABSOLUTELY NO WARRANTY."
 #if defined (CONFIG_SMALL)
 "\n\n"
 #endif
