@@ -1,3 +1,8 @@
+2007-05-04  Marc Singer  <elf@zealous.synapsedev.com>
+
+	* src/apex/cmd-version.c (cmd_version): Added target board
+	description string.
+
 2007-04-30  Marc Singer  <elf@zealous.synapsedev.com>
 
 	* src/mach-mx3/initialize.c: Extra check in the initialization
